src/snapshots/monkey_rs__parser__tests__call_expressions.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Call(
                Identifier(
                    "add",
                ),
                [
                    Integer(
                        1,
                    ),
                    Infix(
                        Integer(
                            2,
                        ),
                        Multiply,
                        Integer(
                            3,
                        ),
                    ),
                    Infix(
                        Integer(
                            4,
                        ),
                        Plus,
                        Integer(
                            5,
                        ),
                    ),
                ],
            ),
        ),
    ],
}
