src/snapshots/monkey_rs__parser__tests__function_paramenter_parsing.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Function(
                [],
                [],
            ),
        ),
        Expression(
            Function(
                [
                    "x",
                ],
                [],
            ),
        ),
        Expression(
            Function(
                [
                    "x",
                    "y",
                    "z",
                ],
                [],
            ),
        ),
    ],
}
