src/snapshots/monkey_rs__parser__tests__function_parsing.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Let(
            "add",
            Function(
                [
                    "x",
                    "y",
                ],
                [
                    Expression(
                        Infix(
                            Identifier(
                                "x",
                            ),
                            Plus,
                            Identifier(
                                "y",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ],
}
