src/snapshots/monkey_rs__parser__tests__if_else_expression.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            If(
                Infix(
                    Identifier(
                        "x",
                    ),
                    LT,
                    Identifier(
                        "y",
                    ),
                ),
                [
                    Expression(
                        Identifier(
                            "x",
                        ),
                    ),
                ],
                [
                    Expression(
                        Identifier(
                            "y",
                        ),
                    ),
                ],
            ),
        ),
    ],
}
