src/snapshots/monkey_rs__parser__tests__parsing_boolean_expression.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Bool(
                true,
            ),
        ),
        Expression(
            Bool(
                false,
            ),
        ),
    ],
}
