src/snapshots/monkey_rs__parser__tests__parsing_identifier_expression.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Identifier(
                "foobar",
            ),
        ),
    ],
}
