src/snapshots/monkey_rs__parser__tests__parsing_infix_expression.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Infix(
                Integer(
                    5,
                ),
                Plus,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                Minus,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                Multiply,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                Divide,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                GT,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                LT,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                Equals,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Integer(
                    5,
                ),
                NotEquals,
                Integer(
                    5,
                ),
            ),
        ),
        Expression(
            Infix(
                Bool(
                    true,
                ),
                Equals,
                Bool(
                    true,
                ),
            ),
        ),
        Expression(
            Infix(
                Bool(
                    true,
                ),
                NotEquals,
                Bool(
                    false,
                ),
            ),
        ),
        Expression(
            Infix(
                Bool(
                    false,
                ),
                Equals,
                Bool(
                    false,
                ),
            ),
        ),
    ],
}
