src/snapshots/monkey_rs__parser__tests__parsing_integer_expression.snap
---
source: src/parser.rs
expression: "&program"
---
Program {
    statements: [
        Expression(
            Integer(
                5,
            ),
        ),
    ],
}
